# socstudio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
i18n/: app_zh_CN.ts
include/: mainwindow.h  qslangdriver.h  qsoccliworker.h  qsocprojectmanager.h  qsocsymbolmanager.h  qstaticlog.h  qstatictranslator.h  schematicwindow.h
resource/: resource.qrc
resource/icon/dark/: index.theme
resource/icon/light/: index.theme
src/: main.cpp  mainwindow.cpp  mainwindowaction.cpp  qslangdriver.cpp  qsoccliparseproject.cpp  qsoccliparsesymbol.cpp  qsoccliworker.cpp  qsocprojectmanager.cpp  qsocsymbolmanager.cpp  qstaticlog.cpp  qstatictranslator.cpp  schematicwindow.cpp
src/cli/: qsoccliparsebus.cpp  qsoccliparsegenerate.cpp  qsoccliparsemodule.cpp  qsoccliparseproject.cpp  qsoccliparsesymbol.cpp  qsoccliworker.cpp  qsoccliworker.h
src/common/: config.h  qllmservice.cpp  qllmservice.h  qslangdriver.cpp  qslangdriver.h  qsocbusmanager.cpp  qsocbusmanager.h  qsocconfig.cpp  qsocconfig.h  qsocgeneratemanager.cpp  qsocgeneratemanager.h  qsocmodulemanager.cpp  qsocmodulemanager.h  qsocprojectmanager.cpp  qsocprojectmanager.h  qsocsymbolmanager.cpp  qsocsymbolmanager.h  qstaticdatasedes.cpp  qstaticdatasedes.h  qstaticicontheme.cpp  qstaticicontheme.h  qstaticlog.cpp  qstaticlog.h  qstaticregex.cpp  qstaticregex.h  qstaticstringweaver.cpp  qstaticstringweaver.h  qstatictranslator.cpp  qstatictranslator.h
src/gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindowaction.cpp
src/gui/schematicwindow/: schematicwindow.cpp  schematicwindow.h  schematicwindowaction.cpp
test/: CMakeLists.txt  test_qslangdriver.cpp  test_qsoccliparseproject.cpp  test_qsoccliworker.cpp  tst_qslangdriver.cpp
ui/: mainwindow.ui  schematicwindow.ui
